--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,15 @@
 {
-    "require": {
-        "phpunit/phpunit": "^9"
-    },
+    "name": "prome/technical-consulting",
     "autoload": {
         "psr-4": {
             "App\\": "src/"
         }
     },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\": "tests"
+    "authors": [
+        {
+            "name": "solidmaradini",
+            "email": "solidmaradini@gmail.com"
         }
-    }
+    ],
+    "require": {}
 }
